# de-zoomcamp

./: .gitignore
week_1/: README.md
week_2/: Dockerfile  Readme.md  ingest_data.py  pyproject.toml
week_2/01_local/: Readme.md  docker-compose.yaml  ingest_data.py
week_2/02_gcp/: etl_web_to_gcs.py
week_2/03_deploy/: etl_parent_flow-deployment.yaml
