[tool.poetry]
name = "week_2"
version = "0.1.0"
description = ""
authors = ["Renier Botha <r.botha91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
prefect = "2.7.7"
greenlet = "^2.0.2"
psycopg2-binary = "^2.9.5"
prefect-sqlalchemy = "^0.2.3"
prefect-gcp = {extras = ["cloud_storage"], version = "^0.2.6"}
protobuf = "^4.21.12"
pyarrow = "^11.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
